feature: Google website verification

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Byteminds - Building Scalable Software, Testing Relentlessly</title>
     <meta name="description" content="From idea to impact—we craft lean, future-proof solutions that grow with your vision. Expert software development, QA automation, and digital solutions." />
     <meta name="author" content="Byteminds" />
+      <meta name="google-site-verification" content="-IKp8Fip2MOulj9tpIeBxbncl2SqUkSLPn_ta-egBNE" />
 
     <meta property="og:title" content="Byteminds - Building Scalable Software" />
     <meta property="og:description" content="From idea to impact—we craft lean, future-proof solutions that grow with your vision" />
